--- a/tavola.html
+++ b/tavola.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="intestazione">
         <h1>tavola</h1>
         <nav>
-            <a href="index.html">HOME</a>
-            <a href="bio.html">BIO</a>
-            <a href="tavola.html">TAVOLA</a>
+            <a class="menu" href="index.html">HOME</a>
+            <a class="menu" href="bio.html">BIO</a>
+            <a class="menu" href="tavola.html">TAVOLA</a>
         </nav>
     </header>
     <main>
+
+        <img class="Gatto" width="200px" src="Gatto.jpg" alt="">
 
     </main>
     <footer>
