ho fatto gli elementi

--- a/tavola.html
+++ b/tavola.html
@@ -15,7 +15,7 @@
             <a class="menu" href="tavola.html">TAVOLA</a>
         </nav>
     </header>
-    <main>
+    <main id="contenitore">
 
         <img class="Gatto" width="200px" src="Gatto.jpg" alt="">
 
@@ -24,4 +24,5 @@
 
     </footer>
 </body>
+<script src="programma.js"></script>
 </html>
