finito orribile by cutax

--- a/tavola.html
+++ b/tavola.html
@@ -17,12 +17,12 @@
     </header>
     <main id="contenitore">
 
-        <img class="Gatto" width="200px" src="Gatto.jpg" alt="">
-
+        
     </main>
     <footer>
 
     </footer>
 </body>
+<script src="PeriodicTable.js"></script>
 <script src="programma.js"></script>
 </html>
